<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".ActivityDos">

    <Button
        android:id="@+id/bn_buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:backgroundTint="#81C784"
        android:text="@string/buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_historial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:backgroundTint="#9575CD"
        android:text="@string/historial"
        app:layout_constraintEnd_toEndOf="@+id/bn_buscar"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/bn_buscar"
        app:layout_constraintTop_toBottomOf="@+id/bn_buscar" />

    <Button
        android:id="@+id/btn_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:backgroundTint="#4DB6AC"
        android:text="@string/chat"
        app:layout_constraintEnd_toEndOf="@+id/btn_historial"
        app:layout_constraintStart_toStartOf="@+id/btn_historial"
        app:layout_constraintTop_toBottomOf="@+id/btn_historial" />

</androidx.constraintlayout.widget.ConstraintLayout>